src/parsers/snapshots/meshb__parsers__mail_parser__tests__start_section_nook.snap
---
source: src/parsers/mail_parser.rs
expression: "start_3d_node_section(\"COORD3D\")"
---
Err(
    Error(
        Base {
            location: "COORD3D",
            kind: Expected(
                Tag(
                    "COOR_3D",
                ),
            ),
        },
    ),
)
