src/parsers/snapshots/meshb__parsers__mail_parser__tests__start_section_ok.snap
---
source: src/parsers/mail_parser.rs
expression: "start_3d_node_section(\"COOR_3D\")"
---
Ok(
    (
        "",
        "COOR_3D",
    ),
)
