src/parsers/snapshots/meshb__parsers__mail_parser__tests__start_title_section_ok.snap
---
source: src/parsers/mail_parser.rs
expression: "start_title_section(\"TITRE\")"
---
Ok(
    (
        "",
        "TITRE",
    ),
)
