src/parsers/snapshots/meshb__parsers__mail_parser__tests__title_section_1.snap
---
source: src/parsers/mail_parser.rs
expression: "title_section(\"TITRE  \\n\\ntitleafsd DD 23\\nFINSF\")"
---
Ok(
    (
        "",
        Title(
            "titleafsd DD 23",
        ),
    ),
)
