src/parsers/snapshots/meshb__parsers__mail_parser__tests__useless_line_ok_3.snap
---
source: src/parsers/mail_parser.rs
expression: "useless_line(\"\\n\")"
---
Ok(
    (
        "",
        (),
    ),
)
